--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             <img  src="./img/Rectangle 19.png" alt="">
         </div>
         <div class="datos">
-                <p><span>Telefono:</span> 996 622 623 </br></p>
-                <p><span>Direccion:</span> Jr Nazca 575 Jesus Maria </br></p>
-                <p><span>Correo:</span> ycaminazana@gmail.com </br></p>
+                <p><span>Telefono:</span> 977 509 592 </br></p>
+                <p><span>Direccion:</span> Callao Gambeta baja </br></p>
+                <p><span>Correo:</span> ing.diegorodriguezv@gmail.com </br></p>
         </div>
         </div>
     </section>
     <footer>
         <p>Todos los derechos reservados</p>
-        <p>Desarrollado por - Yuvixa Camiña</p>
+        <p>Desarrollado por - Diego Rod</p>
     </footer>
 </body>
 </html>
